update piobaireachd music

--- a/piobaireachd_practice.html
+++ b/piobaireachd_practice.html
@@ -35,6 +35,20 @@
     '{ "record_type":"part" , "song":"Crunluath"                        , "mp3":"IGotAKissOfTheKingsHandCrunluath.mp3"         } ,' +
     '{ "record_type":"part" , "song":"Crunluath Doubling"               , "mp3":"IGotAKissOfTheKingsHandCrunluathDoubling.mp3" } ,' +
     '{ "record_type":"part" , "song":"Crunluath A Mach"                 , "mp3":"IGotAKissOfTheKingsHandCrunluathAMach.mp3"    } ,' +
+
+    '{ "record_type":"song" , "song":"The Desperate Battle"             , "mp3":"The Desperate Battle-Piobaireachd.mp3"         } ,' +
+    '{ "record_type":"part" , "song":"Urlar"                            , "mp3":"The Desperate Battle-Urlar.mp3"                } ,' +
+    '{ "record_type":"part" , "song":"Variation 1"                      , "mp3":"The Desperate Battle-Variation 1.mp3"          } ,' +
+    '{ "record_type":"part" , "song":"Variation 1 Doubling"             , "mp3":"The Desperate Battle-Variation 1 Doubling.mp3" } ,' +
+    '{ "record_type":"part" , "song":"Variation 2"                      , "mp3":"The Desperate Battle-Variation 2.mp3"          } ,' +
+    '{ "record_type":"part" , "song":"Variation 2 Doubling"             , "mp3":"The Desperate Battle-Variation 2 Doubling.mp3" } ,' +
+    '{ "record_type":"part" , "song":"Variation 3"                      , "mp3":"The Desperate Battle-Variation 3.mp3"          } ,' +
+    '{ "record_type":"part" , "song":"Variation 3 Doubling"             , "mp3":"The Desperate Battle-Variation 3 Doubling.mp3" } ,' +
+    '{ "record_type":"part" , "song":"Taorluath"                        , "mp3":"The Desperate Battle-Taorluath.mp3"            } ,' +
+    '{ "record_type":"part" , "song":"Taorluath A Mach"                 , "mp3":"The Desperate Battle-Taorluath A Mach.mp3"     } ,' +
+    '{ "record_type":"part" , "song":"Crunluath"                        , "mp3":"The Desperate Battle-Crunluath.mp3"            } ,' +
+    '{ "record_type":"part" , "song":"Crunluath A Mach"                 , "mp3":"The Desperate Battle-Crunluath A Mach.mp3"     } ,' +
+
     '{ "record_type":"song" , "song":"The Glen is Mine"                 , "mp3":"TheGlenIsMine.mp3"                            } ,' +
     '{ "record_type":"part" , "song":"Urlar"                            , "mp3":"TheGlenIsMineUrlar.mp3"                       } ,' +
     '{ "record_type":"part" , "song":"Variation 1"                      , "mp3":"TheGlenIsMineVariation1.mp3"                  } ,' +
