update bagpipe tunes

--- a/bagpipe_playlist.html
+++ b/bagpipe_playlist.html
@@ -107,7 +107,7 @@
     <audio id="audio3" onended="onEnd(songArray[3], audioArray[3])" src="music/OnTheRoadToPasschendaele.mp3"></audio>
     <audio id="audio4" onended="onEnd(songArray[4], audioArray[4])" src="music/RockingTheBaby.mp3"></audio>
     <audio id="audio5" onended="onEnd(songArray[5], audioArray[5])" src="music/PipeSergeantJohnBarclay.mp3"></audio>
-    <audio id="audio6" onended="onEnd(songArray[6], audioArray[6])" src="music/TheHillsOfAlva.mp3"></audio>
+    <audio id="audio6" onended="onEnd(songArray[6], audioArray[6])" src="music/The Hills of Alva-Song.mp3"></audio>
     <audio id="audio7" onended="onEnd(songArray[7], audioArray[7])" src="music/HorsbrughCastle.mp3"></audio>
     <audio id="audio8" onended="onEnd(songArray[8], audioArray[8])" src="music/TheHeroesOfVittoria.mp3"></audio>
     <audio id="audio9" onended="onEnd(songArray[9], audioArray[9])" src="music/MajorACWMaysWelcome.mp3"></audio>
