update bagpipe music

--- a/bagpipe_playlist.html
+++ b/bagpipe_playlist.html
@@ -30,6 +30,7 @@
     '{ "composer":"Gavin Stoddart"   , "song":"On the Road to Passchendaele" , "mp3":"OnTheRoadToPasschendaele.mp3" } ,' +
     '{ "composer":"Traditional"      , "song":"Rocking the Baby"             , "mp3":"RockingTheBaby.mp3"           } ,' +
     '{ "composer":"Ian Duncan"       , "song":"Pipe Sergeant John Barclay"   , "mp3":"PipeSergeantJohnBarclay.mp3"  } ,' +
+    '{ "composer":"William Ross"     , "song":"Leaving Port Askaig"          , "mp3":"Leaving Port Askaig-Song.mp3" } ,' +
     '{ "composer":"Tom Muirhead"     , "song":"The Hills of Alva"            , "mp3":"The Hills of Alva-Song.mp3"   } ,' +
     '{ "composer":"Ian Hardie"       , "song":"Horsbrugh Castle"             , "mp3":"HorsbrughCastle.mp3"          } ,' +
     '{ "composer":"John MacLellan"   , "song":"The Heroes of Vittoria"       , "mp3":"TheHeroesOfVittoria.mp3"      } ,' +
